--- a/SquadApplication/ViewCustom/EditEquipmentPage.xaml
+++ b/SquadApplication/ViewCustom/EditEquipmentPage.xaml
@@ -2,9 +2,12 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="SquadApplication.ViewCustom.EditEquipmentPage"
-             BackgroundImageSource="hkauthorize.jpg"
+             BackgroundImageSource="updateprofileandequip.jpg"
              Title="EditEquipmentPage">
-    <VerticalStackLayout Padding="10" Margin="10">
+    <VerticalStackLayout
+        BackgroundColor="#50808080"
+        Padding="10"
+        Margin="10">
             <Border>
                    <HorizontalStackLayout Padding="10" Margin="10">
                        <Label Text="MainWeapon" TextColor="AliceBlue" FontSize="20"/>
