--- a/SquadApplication/ViewCustom/PolygonsPage.xaml
+++ b/SquadApplication/ViewCustom/PolygonsPage.xaml
@@ -2,9 +2,12 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="SquadApplication.ViewCustom.PolygonsPage"
-             BackgroundImageSource="hkauthorize.jpg"
+             BackgroundImageSource="polygons.jpg"
              Title="PolygonsPage">
-    <VerticalStackLayout x:Name="loyoutItem" Padding="10">        
+    <VerticalStackLayout
+        BackgroundColor="#90808080"
+        x:Name="loyoutItem"
+        Padding="10">        
         <ScrollView>
             <StackLayout >
                 <Button 
