--- a/SquadApplication/ViewCustom/RentalsPage.xaml
+++ b/SquadApplication/ViewCustom/RentalsPage.xaml
@@ -2,11 +2,10 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="SquadApplication.ViewCustom.RentalsPage"
+             BackgroundImageSource="rentails.jpg"
              Title="RentalsPage">
-    <VerticalStackLayout>
-        <Label 
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
+    <VerticalStackLayout
+        BackgroundColor="#50508080"
+        >
     </VerticalStackLayout>
 </ContentPage>
