--- a/SquadApplication/ViewCustom/YourEquipPage.xaml
+++ b/SquadApplication/ViewCustom/YourEquipPage.xaml
@@ -4,16 +4,18 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="SquadApplication.ViewCustom.YourEquipPage"
              Title="YourEquipPage!"
-             BackgroundImageSource="hkauthorize.jpg"
+             BackgroundImageSource="mainprofile.jpg"
              >
-    <VerticalStackLayout Margin="3">
+    <VerticalStackLayout 
+        BackgroundColor="#50808080"
+        Margin="3">
         <Label 
             TextColor="White"
             Text="Welcome to .NET MAUI!"
             VerticalOptions="Center" 
             HorizontalOptions="Center" />
         <Border                      
-            BackgroundColor="#50808080"
+            Opacity="1.0"
             Stroke="CadetBlue"   
             StrokeShape="10"
             StrokeThickness="2"
