--- a/SquadApplication/ViewCustom/FeesPage.xaml
+++ b/SquadApplication/ViewCustom/FeesPage.xaml
@@ -13,7 +13,6 @@
     
     <Grid
         BackgroundColor="#50508080"
-        
         RowDefinitions="Auto,*,Auto"
           Padding="15">
 
@@ -35,7 +34,9 @@
         </Border>
 
         <!-- Список событий -->
-        <StackLayout Grid.Row="1">
+        <StackLayout
+            
+            Grid.Row="1">
             
                     <StackLayout HorizontalOptions="Center"
                                  VerticalOptions="Center"
@@ -52,10 +53,11 @@
                                FontSize="12"
                                HorizontalOptions="Center"/>
                     </StackLayout>
-                
 
-                
-                        <Border BackgroundColor="Transparent"
+
+
+                <Border 
+                               BackgroundColor="#90508080"
                                Stroke="Blue"
                                StrokeShape="2"
                                Padding="0"
