--- a/SquadApplication/ViewCustom/AppendPolygonPage.xaml
+++ b/SquadApplication/ViewCustom/AppendPolygonPage.xaml
@@ -2,9 +2,13 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="SquadApplication.ViewCustom.AppendPolygonPage"
-             BackgroundImageSource="hkauthorize.jpg"
+             BackgroundImageSource="updateprofileandequip.jpg"
              Title="AppendPolygonPage">
-    <VerticalStackLayout VerticalOptions="Center" HorizontalOptions="Center" Padding="10">
+    <VerticalStackLayout 
+        Background="#80808080"
+        VerticalOptions="Center"
+        HorizontalOptions="Center"
+        Padding="10">
         <HorizontalStackLayout >
         <Label Text="Name" TextColor="AliceBlue" FontSize="30"/>
             <Entry Margin="10,-12,0,0" Placeholder="NamePolygon" FontSize="30" PlaceholderColor="Gray"/>
