--- a/SquadApplication/ViewCustom/EventsForAllCommandsPage.xaml
+++ b/SquadApplication/ViewCustom/EventsForAllCommandsPage.xaml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="SquadApplication.ViewCustom.HomePage"
-             Title="HomePage">
+             x:Class="SquadApplication.ViewCustom.EventsForAllCommandsPage"
+             Title="EventsForAllCommands">
     <VerticalStackLayout>
         <Label 
             Text="Welcome to .NET MAUI!"
