--- a/SquadApplication/ViewCustom/EventsForAllCommandsPage.xaml
+++ b/SquadApplication/ViewCustom/EventsForAllCommandsPage.xaml
@@ -2,13 +2,15 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="SquadApplication.ViewCustom.EventsForAllCommandsPage"
+             BackgroundImageSource="events.jpg"
              Title="EventsForAllCommands">
     <RefreshView
+        
        >
 
             <!-- Шапка с фильтрами -->
         <CollectionView x:Name="EventsList"
-                       ItemsSource=""
+                       BackgroundColor="#50508080"
                        SelectionMode="Single"
                        SelectionChanged="OnEventSelected">
 
